# internal/model/swipe.go
@@ -19,3 +19,13 @@ type Swipe struct {
 	Swiper *User `json:"swiper,omitempty"`
 	Swipee *User `json:"swipee,omitempty"`
 }
+
+type CreateSwipeRequest struct {
+	SwipeeID  uuid.UUID `json:"swipeeId" binding:"required"`
+	SwipeType SwipeType `json:"swipeType" binding:"required,oneof=like pass"`
+}
+
+type SwipeResponse struct {
+	Swipe Swipe  `json:"swipe"`
+	Match *Match `json:"match,omitempty"`
+}
